Update to JRE 20 and Tomcat 9